# joho

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: constants.py  exceptions.py  fetcher.py  file_handler.py  normalizer.py  utils.py
core/cli/: cli_utils.py  export_cli.py  fetch_cli.py
core/fetchers/: anilist_fetcher.py  base_fetcher.py  fetcher_factory.py  jikan_fetcher.py
core/models/: anime_model.py  protocols.py
core/normalizers/: anilist_normalizer.py  base_normalizer.py  jikan_normalizer.py  normalizer_factory.py
joho/: main.py
joho/core/: exceptions.py  file_handler.py
joho/core/cli/: cli_utils.py  export_cli.py  fetch_cli.py  read_cli.py
joho/core/fetchers/: anilist_fetcher.py  base_fetcher.py
joho/core/normalizers/: anilist_normalizer.py  jikan_normalizer.py
tests/: test_fetcher_anilist.py  test_fetcher_jikan.py  test_normalizer.py
