[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joho"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "jikanpy-v4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "types-requests"
]

[project.scripts]
joho = "joho.main:main_parser"

[tool.hatch.build.targets.wheel]
packages = ["joho"]